# DBS_Readouts

./: .gitignore  DBS_Readout-net.ipynb  DBS_Readout.ipynb  README.md  main.py  matrix_optim.py  nuke_readout.py  peak_readout.py  pyproject.toml  rPCA_approach.py  readout_analysis.py  readout_design.py  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
Assets/: Untitled.ipynb
assets/: .gitignore  images.dvc  svgs.dvc
notebooks/: A1_coverage.ipynb  A1_rva.py  Brain_Readout_Coverage.ipynb  DBS_Readout-net.ipynb  PredictedVsActual.ipynb  Prediction_Actual_Comparison.ipynb  R2_rundown.ipynb  RO_1_1_LinRegr_Basics.ipynb  RO_1_2_PvAvP.ipynb  RO_1_3_Readout_Nulls.ipynb  RO_1_4_Correlations.ipynb  SVD_completion.ipynb  demo.py
notebooks/.ipynb_checkpoints/: Away_from_binarization-checkpoint.ipynb  PredictedVsActual-checkpoint.ipynb  Prediction_Actual_Comparison-checkpoint.ipynb  RO_1_1_LinRegr_Basics-checkpoint.ipynb  RO_1_2_PvAvP-checkpoint.ipynb  RO_1_4_Correlations-checkpoint.ipynb  Untitled-checkpoint.ipynb
notebooks/coverage/: A1_coverage.py  A1_rva.py
notebooks/drafts/: Away_from_binarization.ipynb  Brain_Readout_Coverage.ipynb  DBS_Readout-discrete.ipynb  Sin_Sliders.ipynb  Untitled.ipynb
notebooks/drafts/.ipynb_checkpoints/: DBS_Readout-discrete-checkpoint.ipynb
notebooks/paper/: random_gamma_clipping.py
src/dbread/: ro_sys.py
src/dbread/assessment/: ro_assess.py
src/dbread/sys/: rosys.py  systems.py
src/dbread/utils/: clips.py  functions.py
src/dbread/viz/: assessment.py
src/rolim/: ro_sys.py
